--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fendex - e-Commerce Website</title>
+    <title>Fender - e-Commerce Website</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -59,7 +59,7 @@
             <div class="newsletter-header">
               <h3 class="newsletter-title">Subscribe to Our Newsletter.</h3>
               <p class="newsletter-desc">
-                Subscribe to <b>Fendex</b> to get the latest products and
+                Subscribe to <b>Fender</b> to get the latest products and
                 discount updates.
               </p>
             </div>
